Fix CDFS-SWIRE COMBO Jy to uJy in wfi_r

--- a/dmu1/dmu1_ml_CDFS-SWIRE/1.5_COMBO.ipynb
+++ b/dmu1/dmu1_ml_CDFS-SWIRE/1.5_COMBO.ipynb
@@ -41,7 +41,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -306,7 +308,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Set wavelengths for unit conversion.\n",
@@ -451,8 +455,8 @@
     "        \n",
     "#Add total fluxes for R band\n",
     "f_combo_r, ferr_combo_r = mag_to_flux(catalogue['m_combo_r'],catalogue['merr_combo_r'])\n",
-    "catalogue['f_combo_r'] = f_combo_r\n",
-    "catalogue['ferr_combo_r'] = ferr_combo_r"
+    "catalogue['f_combo_r'] = f_combo_r *1.e6 #uJy\n",
+    "catalogue['ferr_combo_r'] = ferr_combo_r *1.e6 #uJy"
    ]
   },
   {
@@ -768,7 +772,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
