Run fixed CDFS-SWIRE masterlist through pipeline

--- a/dmu28/dmu28_CDFS-SWIRE/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_CDFS-SWIRE/CIGALE_catalogue_preparation.ipynb
@@ -33,7 +33,7 @@
    },
    "outputs": [],
    "source": [
-    "SUFFIX=\"20180221\"\n",
+    "SUFFIX=\"20180613\"\n",
     "master_catalogue = Table.read(\"../../dmu32/dmu32_CDFS-SWIRE/data/CDFS-SWIRE_{}_cigale.fits\".format(SUFFIX))"
    ]
   },
@@ -323,7 +323,7 @@
    "source": [
     "u_bands = [                      \"omegacam_u\"]\n",
     "g_bands = [           \"decam_g\", \"omegacam_g\", \"gpc1_g\"]\n",
-    "r_bands = [           \"decam_r\", \"omegacam_r\", \"gpc1_r\"]\n",
+    "r_bands = [           \"decam_r\", \"omegacam_r\", \"gpc1_r\", \"wfi_r\"]\n",
     "i_bands = [           \"decam_i\", \"omegacam_i\", \"gpc1_i\"]\n",
     "z_bands = [\"vista_z\", \"decam_z\", \"omegacam_z\", \"gpc1_z\",]\n",
     "y_bands = [\"vista_y\", \"decam_y\",               \"gpc1_y\" ]\n",
