Run fixed CDFS-SWIRE masterlist through pipeline

--- a/dmu32/dmu32_CDFS-SWIRE/CDFS-SWIRE_catalogue_merging.ipynb
+++ b/dmu32/dmu32_CDFS-SWIRE/CDFS-SWIRE_catalogue_merging.ipynb
@@ -21,7 +21,7 @@
    "source": [
     "# Set this to true to produce only the catalogue for CIGALE and to false \n",
     "# to continue and merge the CIGALE results too.\n",
-    "MAKE_CIGALE_INPUT = False\n",
+    "MAKE_CIGALE_INPUT = True\n",
     "MAKE_FINAL_CATALOGUE = True"
    ]
   },
@@ -233,7 +233,7 @@
    "outputs": [],
    "source": [
     "# Flags\n",
-    "flags = Table.read(\"../../dmu6/dmu6_v_CDFS-SWIRE/data/cdfs-swire_20180221_flags.fits\")"
+    "flags = Table.read(\"../../dmu6/dmu6_v_CDFS-SWIRE/data/cdfs-swire_20180613_flags.fits\")"
    ]
   },
   {
@@ -570,7 +570,7 @@
    "source": [
     "if MAKE_FINAL_CATALOGUE:\n",
     "\n",
-    "    merged_table[columns].write(\"data/CDFS-SWIRE.fits\", overwrite=True)"
+    "    merged_table[columns].write(\"data/CDFS-SWIRE_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   }
  ],
