CDFS-SWIRE rerun complete

--- a/dmu32/dmu32_CDFS-SWIRE/CDFS-SWIRE_catalogue_merging.ipynb
+++ b/dmu32/dmu32_CDFS-SWIRE/CDFS-SWIRE_catalogue_merging.ipynb
@@ -366,7 +366,16 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set()\n",
+      "{'flag_irac_i4_ap', 'flag_irac_i2_ap', 'flag_irac_i3_ap', 'flag_irac_i1_ap'}\n"
+     ]
+    }
+   ],
    "source": [
     "if MAKE_CIGALE_INPUT:\n",
     "    \n",
