Work on DMU1 readme - link to files and columns

--- a/dmu1/Masterlist_overview.ipynb
+++ b/dmu1/Masterlist_overview.ipynb
@@ -61,7 +61,7 @@
     "# Field                suffix\n",
     "['AKARI-NEP',          '20180215' ],\n",
     "['AKARI-SEP',          '20180221' ],\n",
-    "['Bootes',             '20180520' ], #There are two versions Brown and HELP - we use Brown\n",
+    "['Bootes',             '20180520' ], \n",
     "['CDFS-SWIRE',         '20180613' ],\n",
     "['COSMOS',             '20180516' ],\n",
     "['EGS',                '20180501' ],\n",
