Add metadata to final dmu32 table

--- a/dmu32/dmu32_AKARI-NEP/AKARI-NEP_catalogue_merging.ipynb
+++ b/dmu32/dmu32_AKARI-NEP/AKARI-NEP_catalogue_merging.ipynb
@@ -23,9 +23,9 @@
      "output_type": "stream",
      "text": [
       "This notebook was run with herschelhelp_internal version: \n",
-      "708e28f (Tue May 8 18:05:21 2018 +0100)\n",
+      "708e28f (Tue May 8 18:05:21 2018 +0100) [with local modifications]\n",
       "This notebook was executed on: \n",
-      "2018-05-31 00:51:28.340801\n"
+      "2018-06-18 14:49:56.090431\n"
      ]
     }
    ],
@@ -61,6 +61,8 @@
     "\n",
     "from astropy.table import Column, MaskedColumn, Table, join, vstack\n",
     "\n",
+    "from herschelhelp_internal.utils import add_column_meta\n",
+    "\n",
     "from herschelhelp.filters import get_filter_meta_table\n",
     "\n",
     "filter_mean_lambda = {\n",
@@ -78,65 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#! env python3\n",
-    "\n",
-    "from astropy.table import Table\n",
-    "import yaml\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "def add_column_meta(catalogue, column_yml_file):\n",
-    "    \"\"\"Add column descriptions and other meta data\n",
-    "        \n",
-    "    Given a table and a yml file with a list of column names \n",
-    "    and descriptions and ucd descriptors write all these to \n",
-    "    the appropriate columns in the table.\n",
-    "\n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    catalogue: astropy.table.Table object\n",
-    "        The table to add descriptions to\n",
-    "    column_yml_file: String\n",
-    "        link to yml file describing column definitions.\n",
-    "\n",
-    "    Returns\n",
-    "    -------\n",
-    "    catalogue: astropy.table.Table object\n",
-    "        The output catalogue as input but with added column meta.\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    meta = yaml.load(open(column_yml_file, \"r\"))\n",
-    "    \n",
-    "    for col in catalogue.itercols():\n",
-    "        try:\n",
-    "            unit = meta[col.name]['unit']\n",
-    "            if unit != \"None\":\n",
-    "                catalogue[col.name].unit = unit\n",
-    "            catalogue[col.name].description = meta[col.name]['description']\n",
-    "        except KeyError:\n",
-    "            print(\"Column {} has missing data\".format(col.name))\n",
-    "\n",
-    "        \n",
-    "    return catalogue\n",
-    "        \n",
-    "    \n",
-    "    \n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -147,197 +91,6 @@
     "ml = Table.read(\n",
     "    \"../../dmu1/dmu1_ml_AKARI-NEP/data/master_catalogue_akari-nep_{}.fits\".format(SUFFIX))\n",
     "ml.meta = None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "meta = yaml.load(open('../columns.yml', \"r\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'f_megacam_u'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-b5f382d6b514>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmeta\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'f_megacam_u'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'description'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m: 'f_megacam_u'"
-     ]
-    }
-   ],
-   "source": [
-    "meta['f_megacam_u']['description']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Column f_megacam_u has missing data\n",
-      "Column ferr_megacam_u has missing data\n",
-      "Column m_megacam_u has missing data\n",
-      "Column merr_megacam_u has missing data\n",
-      "Column f_megacam_g has missing data\n",
-      "Column ferr_megacam_g has missing data\n",
-      "Column m_megacam_g has missing data\n",
-      "Column merr_megacam_g has missing data\n",
-      "Column f_megacam_r has missing data\n",
-      "Column ferr_megacam_r has missing data\n",
-      "Column m_megacam_r has missing data\n",
-      "Column merr_megacam_r has missing data\n",
-      "Column f_megacam_i has missing data\n",
-      "Column ferr_megacam_i has missing data\n",
-      "Column m_megacam_i has missing data\n",
-      "Column merr_megacam_i has missing data\n",
-      "Column f_megacam_z has missing data\n",
-      "Column ferr_megacam_z has missing data\n",
-      "Column m_megacam_z has missing data\n",
-      "Column merr_megacam_z has missing data\n",
-      "Column stellarity has missing data\n",
-      "Column stellarity_origin has missing data\n"
-     ]
-    }
-   ],
-   "source": [
-    "ml = add_column_meta(ml, '../columns.yml')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "help_id has unit: None and description: HELP identifier, based on J2000 position.\n",
-      "field has unit: None and description: Name of the field in HELP survey.\n",
-      "ra has unit: deg and description: Right Ascension (J2000).\n",
-      "dec has unit: deg and description: Declination (J2000).\n",
-      "hp_idx has unit: None and description: HEALPix index of the source position at order 13 using the nested scheme..\n",
-      "f_ap_gpc1_g has unit: uJy and description: Aperture (nearest aperture to 2 arcsec, aperture correction applied) flux density in the B band of The Pan-STARRS Gigapixel Camera on The Panoramic Survey Telescope and Rapid Response System (Pan-STARRS)..\n",
-      "ferr_ap_gpc1_g has unit: uJy and description: Uncertainty on f_ap_gpc1_g..\n",
-      "m_ap_gpc1_g has unit: mag and description: Aperture (nearest aperture to 2 arcsec, aperture correction applied) AB magnitude in the B band of The Pan-STARRS Gigapixel Camera on The Panoramic Survey Telescope and Rapid Response System (Pan-STARRS)..\n",
-      "merr_ap_gpc1_g has unit: mag and description: Mean error on m_ap_gpc1_g.\n",
-      "f_gpc1_g has unit: uJy and description: Total flux density in the B band of The Pan-STARRS Gigapixel Camera on The Panoramic Survey Telescope and Rapid Response System (Pan-STARRS)..\n",
-      "ferr_gpc1_g has unit: uJy and description: Uncertainty on f_gpc1_g..\n",
-      "m_gpc1_g has unit: mag and description: Total AB magnitude in the B band of The Pan-STARRS Gigapixel Camera on The Panoramic Survey Telescope and Rapid Response System (Pan-STARRS)..\n",
-      "merr_gpc1_g has unit: mag and description: Mean error on m_gpc1_g..\n",
-      "f_ap_gpc1_r has unit: uJy and description: Aperture (nearest aperture to 2 arcsec, aperture correction applied) flux density in the R band of The Pan-STARRS Gigapixel Camera on The Panoramic Survey Telescope and Rapid Response System (Pan-STARRS)..\n",
-      "ferr_ap_gpc1_r has unit: uJy and description: Uncertainty on f_ap_gpc1_r..\n",
-      "m_ap_gpc1_r has unit: mag and description: Aperture (nearest aperture to 2 arcsec, aperture correction applied) AB magnitude in the R band of The Pan-STARRS Gigapixel Camera on The Panoramic Survey Telescope and Rapid Response System (Pan-STARRS)..\n",
-      "merr_ap_gpc1_r has unit: mag and description: Mean error on m_ap_gpc1_r.\n",
-      "f_gpc1_r has unit: uJy and description: Total flux density in the R band of The Pan-STARRS Gigapixel Camera on The Panoramic Survey Telescope and Rapid Response System (Pan-STARRS)..\n",
-      "ferr_gpc1_r has unit: uJy and description: Uncertainty on f_gpc1_r..\n",
-      "m_gpc1_r has unit: mag and description: Total AB magnitude in the R band of The Pan-STARRS Gigapixel Camera on The Panoramic Survey Telescope and Rapid Response System (Pan-STARRS)..\n",
-      "merr_gpc1_r has unit: mag and description: Mean error on m_gpc1_r..\n",
-      "f_ap_gpc1_i has unit: uJy and description: Aperture (nearest aperture to 2 arcsec, aperture correction applied) flux density in the I band of The Pan-STARRS Gigapixel Camera on The Panoramic Survey Telescope and Rapid Response System (Pan-STARRS)..\n",
-      "ferr_ap_gpc1_i has unit: uJy and description: Uncertainty on f_ap_gpc1_i..\n",
-      "m_ap_gpc1_i has unit: mag and description: Aperture (nearest aperture to 2 arcsec, aperture correction applied) AB magnitude in the I band of The Pan-STARRS Gigapixel Camera on The Panoramic Survey Telescope and Rapid Response System (Pan-STARRS)..\n",
-      "merr_ap_gpc1_i has unit: mag and description: Mean error on m_ap_gpc1_i.\n",
-      "f_gpc1_i has unit: uJy and description: Total flux density in the I band of The Pan-STARRS Gigapixel Camera on The Panoramic Survey Telescope and Rapid Response System (Pan-STARRS)..\n",
-      "ferr_gpc1_i has unit: uJy and description: Uncertainty on f_gpc1_i..\n",
-      "m_gpc1_i has unit: mag and description: Total AB magnitude in the I band of The Pan-STARRS Gigapixel Camera on The Panoramic Survey Telescope and Rapid Response System (Pan-STARRS)..\n",
-      "merr_gpc1_i has unit: mag and description: Mean error on m_gpc1_i..\n",
-      "f_ap_gpc1_z has unit: uJy and description: Aperture (nearest aperture to 2 arcsec, aperture correction applied) flux density in the I band of The Pan-STARRS Gigapixel Camera on The Panoramic Survey Telescope and Rapid Response System (Pan-STARRS)..\n",
-      "ferr_ap_gpc1_z has unit: uJy and description: Uncertainty on f_ap_gpc1_z..\n",
-      "m_ap_gpc1_z has unit: mag and description: Aperture (nearest aperture to 2 arcsec, aperture correction applied) AB magnitude in the I band of The Pan-STARRS Gigapixel Camera on The Panoramic Survey Telescope and Rapid Response System (Pan-STARRS)..\n",
-      "merr_ap_gpc1_z has unit: mag and description: Mean error on m_ap_gpc1_z.\n",
-      "f_gpc1_z has unit: uJy and description: Total flux density in the I band of The Pan-STARRS Gigapixel Camera on The Panoramic Survey Telescope and Rapid Response System (Pan-STARRS)..\n",
-      "ferr_gpc1_z has unit: uJy and description: Uncertainty on f_gpc1_z..\n",
-      "m_gpc1_z has unit: mag and description: Total AB magnitude in the I band of The Pan-STARRS Gigapixel Camera on The Panoramic Survey Telescope and Rapid Response System (Pan-STARRS)..\n",
-      "merr_gpc1_z has unit: mag and description: Mean error on m_gpc1_z..\n",
-      "f_ap_gpc1_y has unit: uJy and description: Aperture (nearest aperture to 2 arcsec, aperture correction applied) flux density in the I band of The Pan-STARRS Gigapixel Camera on The Panoramic Survey Telescope and Rapid Response System (Pan-STARRS)..\n",
-      "ferr_ap_gpc1_y has unit: uJy and description: Uncertainty on f_ap_gpc1_y..\n",
-      "m_ap_gpc1_y has unit: mag and description: Aperture (nearest aperture to 2 arcsec, aperture correction applied) AB magnitude in the I band of The Pan-STARRS Gigapixel Camera on The Panoramic Survey Telescope and Rapid Response System (Pan-STARRS)..\n",
-      "merr_ap_gpc1_y has unit: mag and description: Mean error on m_ap_gpc1_y.\n",
-      "f_gpc1_y has unit: uJy and description: Total flux density in the I band of The Pan-STARRS Gigapixel Camera on The Panoramic Survey Telescope and Rapid Response System (Pan-STARRS)..\n",
-      "ferr_gpc1_y has unit: uJy and description: Uncertainty on f_gpc1_y..\n",
-      "m_gpc1_y has unit: mag and description: Total AB magnitude in the I band of The Pan-STARRS Gigapixel Camera on The Panoramic Survey Telescope and Rapid Response System (Pan-STARRS)..\n",
-      "merr_gpc1_y has unit: mag and description: Mean error on m_gpc1_y..\n",
-      "f_ap_irac_i1 has unit: uJy and description: Aperture (nearest aperture to 2 arcsec, aperture correction applied) flux density in the 3-4um band of The Infrared Array Camera (IRAC) on The Spitzer Space Telescope..\n",
-      "ferr_ap_irac_i1 has unit: uJy and description: Uncertainty on f_ap_irac_i1..\n",
-      "m_ap_irac_i1 has unit: mag and description: Aperture (nearest aperture to 2 arcsec, aperture correction applied) AB magnitude in the 3-4um band of The Infrared Array Camera (IRAC) on The Spitzer Space Telescope..\n",
-      "merr_ap_irac_i1 has unit: mag and description: Mean error on m_ap_irac_i1.\n",
-      "f_irac_i1 has unit: uJy and description: Total flux density in the 3-4um band of The Infrared Array Camera (IRAC) on The Spitzer Space Telescope..\n",
-      "ferr_irac_i1 has unit: uJy and description: Uncertainty on f_irac_i1..\n",
-      "m_irac_i1 has unit: mag and description: Total AB magnitude in the 3-4um band of The Infrared Array Camera (IRAC) on The Spitzer Space Telescope..\n",
-      "merr_irac_i1 has unit: mag and description: Mean error on m_irac_i1..\n",
-      "f_ap_irac_i2 has unit: uJy and description: Aperture (nearest aperture to 2 arcsec, aperture correction applied) flux density in the 4-8um band of The Infrared Array Camera (IRAC) on The Spitzer Space Telescope..\n",
-      "ferr_ap_irac_i2 has unit: uJy and description: Uncertainty on f_ap_irac_i2..\n",
-      "m_ap_irac_i2 has unit: mag and description: Aperture (nearest aperture to 2 arcsec, aperture correction applied) AB magnitude in the 4-8um band of The Infrared Array Camera (IRAC) on The Spitzer Space Telescope..\n",
-      "merr_ap_irac_i2 has unit: mag and description: Mean error on m_ap_irac_i2.\n",
-      "f_irac_i2 has unit: uJy and description: Total flux density in the 4-8um band of The Infrared Array Camera (IRAC) on The Spitzer Space Telescope..\n",
-      "ferr_irac_i2 has unit: uJy and description: Uncertainty on f_irac_i2..\n",
-      "m_irac_i2 has unit: mag and description: Total AB magnitude in the 4-8um band of The Infrared Array Camera (IRAC) on The Spitzer Space Telescope..\n",
-      "merr_irac_i2 has unit: mag and description: Mean error on m_irac_i2..\n",
-      "f_megacam_u has unit: None and description: None.\n",
-      "ferr_megacam_u has unit: None and description: None.\n",
-      "m_megacam_u has unit: mag and description: None.\n",
-      "merr_megacam_u has unit: mag and description: None.\n",
-      "f_megacam_g has unit: None and description: None.\n",
-      "ferr_megacam_g has unit: None and description: None.\n",
-      "m_megacam_g has unit: mag and description: None.\n",
-      "merr_megacam_g has unit: mag and description: None.\n",
-      "f_megacam_r has unit: None and description: None.\n",
-      "ferr_megacam_r has unit: None and description: None.\n",
-      "m_megacam_r has unit: mag and description: None.\n",
-      "merr_megacam_r has unit: mag and description: None.\n",
-      "f_megacam_i has unit: None and description: None.\n",
-      "ferr_megacam_i has unit: None and description: None.\n",
-      "m_megacam_i has unit: mag and description: None.\n",
-      "merr_megacam_i has unit: mag and description: None.\n",
-      "f_megacam_z has unit: None and description: None.\n",
-      "ferr_megacam_z has unit: None and description: None.\n",
-      "m_megacam_z has unit: mag and description: None.\n",
-      "merr_megacam_z has unit: mag and description: None.\n",
-      "f_wircam_j has unit: uJy and description: Total flux density in the J band of Wide-field InfraRed Camera (WIRCam) on Canada France Hawaii Telescope (CFHT)..\n",
-      "ferr_wircam_j has unit: uJy and description: Uncertainty on f_wircam_j..\n",
-      "m_wircam_j has unit: mag and description: Total AB magnitude in the J band of Wide-field InfraRed Camera (WIRCam) on Canada France Hawaii Telescope (CFHT)..\n",
-      "merr_wircam_j has unit: mag and description: Mean error on m_wircam_j..\n",
-      "f_wircam_ks has unit: uJy and description: Total flux density in the K band of Wide-field InfraRed Camera (WIRCam) on Canada France Hawaii Telescope (CFHT)..\n",
-      "ferr_wircam_ks has unit: uJy and description: Uncertainty on f_wircam_ks..\n",
-      "m_wircam_ks has unit: mag and description: Total AB magnitude in the K band of Wide-field InfraRed Camera (WIRCam) on Canada France Hawaii Telescope (CFHT)..\n",
-      "merr_wircam_ks has unit: mag and description: Mean error on m_wircam_ks..\n",
-      "f_wircam_y has unit: uJy and description: Total flux density in the I band of Wide-field InfraRed Camera (WIRCam) on Canada France Hawaii Telescope (CFHT)..\n",
-      "ferr_wircam_y has unit: uJy and description: Uncertainty on f_wircam_y..\n",
-      "m_wircam_y has unit: mag and description: Total AB magnitude in the I band of Wide-field InfraRed Camera (WIRCam) on Canada France Hawaii Telescope (CFHT)..\n",
-      "merr_wircam_y has unit: mag and description: Mean error on m_wircam_y..\n",
-      "stellarity has unit: None and description: None.\n",
-      "stellarity_origin has unit: None and description: None.\n",
-      "flag_cleaned has unit: None and description: Boolean flag denoting that the source was associated to really near object that were removed during the cleaning procedure..\n",
-      "flag_merged has unit: None and description: Boolean flag denoting a possible mis-association during the cross-matching of the various catalogues..\n",
-      "flag_gaia has unit: None and description: Flag indicating the increasing probability of the source being a Gaia object (see note)..\n",
-      "flag_optnir_obs has unit: None and description: Flag indicating in which wavelength regimes the source was observed (see note)..\n",
-      "flag_optnir_det has unit: None and description: Flag indicating in which wavelength regimes the source was detected (see note)..\n",
-      "ebv has unit: None and description: Galactic extinction (Schlegel et al. 1998) at the object position.\n",
-      "zspec_association_flag has unit: None and description: Boolean flag set to true when the association of a source to it's redshift may be problematic (possible mis-cross-association)..\n",
-      "zspec_qual has unit: None and description: Spectroscopic redshift quality flag. FIXME code meaning..\n",
-      "zspec has unit: None and description: Spectroscopic redshift collated from the literature..\n"
-     ]
-    }
-   ],
-   "source": [
-    "for col in ml.colnames:\n",
-    "    print(\"{} has unit: {} and description: {}.\".format(col, ml[col].unit, ml[col].description))"
    ]
   },
   {
@@ -687,7 +440,7 @@
     "    print(set(columns) - set(merged_table.colnames))\n",
     "    print( set(merged_table.colnames) - set(columns) )\n",
     "    \n",
-    "    \n",
+    "    merged_table = add_column_meta(merged_table, '../columns.yml')\n",
     "    merged_table[columns].write(\"data/AKARI-NEP_{}_cigale.fits\".format(SUFFIX), overwrite=True)"
    ]
   },
@@ -852,7 +605,7 @@
    "outputs": [],
    "source": [
     "if not FIRST_RUN_FOR_CIGALE:\n",
-    "\n",
+    "    merged_table = add_column_meta(merged_table, '../columns.yml')\n",
     "    merged_table[columns].write(\"data/CDFS-SWIRE.fits\", overwrite=True)"
    ]
   }
