Add meta on all fields

--- a/dmu32/dmu32_ELAIS-N1/ELAIS-N1_catalogue_merging.ipynb
+++ b/dmu32/dmu32_ELAIS-N1/ELAIS-N1_catalogue_merging.ipynb
@@ -38,6 +38,8 @@
     "\n",
     "from herschelhelp.filters import get_filter_meta_table\n",
     "\n",
+    "from herschelhelp_internal.utils import add_column_meta\n",
+    "\n",
     "filter_mean_lambda = {\n",
     "    item['filter_id']: item['mean_wavelength'] for item in\n",
     "    get_filter_meta_table()\n",
@@ -103,7 +105,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# XID+ PACS\n",
@@ -399,7 +403,7 @@
     "    # Check that we did not forget any column\n",
     "    assert set(columns) == set(merged_table.colnames)\n",
     "    \n",
-    "    \n",
+    "    merged_table = add_column_meta(merged_table, '../columns.yml')\n",
     "    merged_table[columns].write(\"data/ELAIS-N1_{}_cigale.fits\".format(SUFFIX))"
    ]
   },
@@ -564,6 +568,7 @@
    "outputs": [],
    "source": [
     "merged_table['help_id'] = merged_table['help_id'].astype('S27')\n",
+    "merged_table = add_column_meta(merged_table, '../columns.yml')\n",
     "merged_table[columns].write(\"data/ELAIS-N1_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   }
