--- a/dmu32/dmu32_NGP/NGP_catalogue_merging.ipynb
+++ b/dmu32/dmu32_NGP/NGP_catalogue_merging.ipynb
@@ -38,6 +38,8 @@
     "\n",
     "from herschelhelp.filters import get_filter_meta_table\n",
     "\n",
+    "from herschelhelp_internal.utils import add_column_meta\n",
+    "\n",
     "filter_mean_lambda = {\n",
     "    item['filter_id']: item['mean_wavelength'] for item in\n",
     "    get_filter_meta_table()\n",
@@ -400,7 +402,7 @@
     "    print(set(columns) - set(merged_table.colnames))\n",
     "    print( set(merged_table.colnames) - set(columns) )\n",
     "    \n",
-    "    \n",
+    "    merged_table = add_column_meta(merged_table, '../columns.yml')\n",
     "    merged_table.write(\"data/NGP_{}_cigale.fits\".format(SUFFIX), overwrite=True)"
    ]
   },
@@ -566,6 +568,7 @@
    "source": [
     "if not FIRST_RUN_FOR_CIGALE:\n",
     "\n",
+    "    merged_table = add_column_meta(merged_table, '../columns.yml')\n",
     "    merged_table[columns].write(\"data/CDFS-SWIRE.fits\")"
    ]
   }
