--- a/dmu32/dmu32_SGP/SGP_catalogue_merging.ipynb
+++ b/dmu32/dmu32_SGP/SGP_catalogue_merging.ipynb
@@ -37,6 +37,8 @@
     "\n",
     "from astropy.table import Column, MaskedColumn, Table, join, vstack\n",
     "\n",
+    "from herschelhelp_internal.utils import add_column_meta\n",
+    "\n",
     "from herschelhelp.filters import get_filter_meta_table\n",
     "\n",
     "filter_mean_lambda = {\n",
@@ -5145,6 +5147,7 @@
     "        print(  set(merged_table.colnames) - set(columns) )\n",
     "    \n",
     "    \n",
+    "        merged_table = add_column_meta(merged_table, '../columns.yml')\n",
     "        merged_table[columns].write(\"data/tiles/sgp_{}_cigale_{}.fits\".format(SUFFIX, file_num), overwrite=True)"
    ]
   },
