--- a/dmu32/dmu32_XMM-13hr/XMM-13hr_catalogue_merging.ipynb
+++ b/dmu32/dmu32_XMM-13hr/XMM-13hr_catalogue_merging.ipynb
@@ -25,6 +25,8 @@
     "\n",
     "from herschelhelp.filters import get_filter_meta_table\n",
     "\n",
+    "from herschelhelp_internal.utils import add_column_meta\n",
+    "\n",
     "filter_mean_lambda = {\n",
     "    item['filter_id']: item['mean_wavelength'] for item in\n",
     "    get_filter_meta_table()\n",
@@ -529,7 +531,8 @@
    "outputs": [],
    "source": [
     "if not FIRST_RUN_FOR_CIGALE:\n",
-    "\n",
+    "    \n",
+    "    merged_table = add_column_meta(merged_table, '../columns.yml')\n",
     "    merged_table[columns].write(\"data/CDFS-SWIRE.fits\")"
    ]
   }
