--- a/dmu32/dmu32_ELAIS-N2/ELAIS-N2_catalogue_merging.ipynb
+++ b/dmu32/dmu32_ELAIS-N2/ELAIS-N2_catalogue_merging.ipynb
@@ -50,6 +50,8 @@
     "\n",
     "from herschelhelp.filters import get_filter_meta_table\n",
     "\n",
+    "from herschelhelp_internal.utils import add_column_meta\n",
+    "\n",
     "filter_mean_lambda = {\n",
     "    item['filter_id']: item['mean_wavelength'] for item in\n",
     "    get_filter_meta_table()\n",
@@ -442,9 +444,11 @@
     "\n",
     "    # Check that we did not forget any column\n",
     "    # assert set(columns) == set(merged_table.colnames)\n",
+    "    print(set(columns) - set(merged_table.colnames))\n",
+    "    print( set(merged_table.colnames) - set(columns) )\n",
     "    \n",
-    "    \n",
-    "    merged_table.write(\"data/ELAIS-N2_{}_cigale.fits\".format(SUFFIX), overwrite=True)"
+    "    merged_table = add_column_meta(merged_table, '../columns.yml')\n",
+    "    merged_table[columns].write(\"data/ELAIS-N2_{}_cigale.fits\".format(SUFFIX), overwrite=True)"
    ]
   },
   {
@@ -609,6 +613,7 @@
    "source": [
     "if not FIRST_RUN_FOR_CIGALE:\n",
     "\n",
+    "    merged_table = add_column_meta(merged_table, '../columns.yml')\n",
     "    merged_table[columns].write(\"data/CDFS-SWIRE.fits\", overwrite=True)"
    ]
   }
