--- a/dmu32/dmu32_ELAIS-S1/ELAIS-S1_catalogue_merging.ipynb
+++ b/dmu32/dmu32_ELAIS-S1/ELAIS-S1_catalogue_merging.ipynb
@@ -50,6 +50,8 @@
     "\n",
     "from herschelhelp.filters import get_filter_meta_table\n",
     "\n",
+    "from herschelhelp_internal.utils import add_column_meta\n",
+    "\n",
     "filter_mean_lambda = {\n",
     "    item['filter_id']: item['mean_wavelength'] for item in\n",
     "    get_filter_meta_table()\n",
@@ -408,10 +410,11 @@
     "\n",
     "    # Check that we did not forget any column\n",
     "    # assert set(columns) == set(merged_table.colnames)\n",
-    "    \n",
-    "    \n",
-    "    merged_table.write(\"data/ELAIS-S1_{}_cigale.fits\".format(SUFFIX), overwrite=True)\n",
     "    print(set(columns) - set(merged_table.colnames))\n",
+    "    \n",
+    "    merged_table = add_column_meta(merged_table, '../columns.yml')\n",
+    "    merged_table[columns].write(\"data/ELAIS-S1_{}_cigale.fits\".format(SUFFIX), overwrite=True)\n",
+    "    \n",
     "    "
    ]
   },
@@ -582,6 +585,7 @@
    "outputs": [],
    "source": [
     "if MAKE_FINAL_CAT:\n",
+    "    merged_table = add_column_meta(merged_table, '../columns.yml')\n",
     "    merged_table[columns].write(\"data/ELAIS-S1_{}.fits\".format(SUFFIX), overwrite=True)\n",
     "    "
    ]
