--- a/dmu32/dmu32_Lockman-SWIRE/Lockman-SWIRE_catalogue_merging.ipynb
+++ b/dmu32/dmu32_Lockman-SWIRE/Lockman-SWIRE_catalogue_merging.ipynb
@@ -25,6 +25,8 @@
     "\n",
     "from herschelhelp.filters import get_filter_meta_table\n",
     "\n",
+    "from herschelhelp_internal.utils import add_column_meta\n",
+    "\n",
     "filter_mean_lambda = {\n",
     "    item['filter_id']: item['mean_wavelength'] for item in\n",
     "    get_filter_meta_table()\n",
@@ -427,7 +429,7 @@
     "    print(set(columns) - set(merged_table.colnames))\n",
     "    print( set(merged_table.colnames) - set(columns) )\n",
     "    \n",
-    "    \n",
+    "    merged_table = add_column_meta(merged_table, '../columns.yml')\n",
     "    merged_table[columns].write(\"data/Lockman-SWIRE_{}_cigale.fits\".format(SUFFIX), overwrite=True)"
    ]
   },
@@ -588,6 +590,7 @@
    "source": [
     "if MAKE_FINAL_CATALOGUE:\n",
     "\n",
+    "    merged_table = add_column_meta(merged_table, '../columns.yml')\n",
     "    merged_table.write(\"data/Lockman-SWIRE_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   }
