--- a/dmu32/dmu32_XMM-LSS/XMM-LSS_catalogue_merging.ipynb
+++ b/dmu32/dmu32_XMM-LSS/XMM-LSS_catalogue_merging.ipynb
@@ -27,6 +27,8 @@
     "\n",
     "from herschelhelp.filters import get_filter_meta_table\n",
     "\n",
+    "from herschelhelp_internal.utils import add_column_meta\n",
+    "\n",
     "filter_mean_lambda = {\n",
     "    item['filter_id']: item['mean_wavelength'] for item in\n",
     "    get_filter_meta_table()\n",
@@ -1826,7 +1828,7 @@
     "        print( set(columns) - set(merged_table.colnames))\n",
     "        print(  set(merged_table.colnames) - set(columns) )\n",
     "    \n",
-    "    \n",
+    "        merged_table = add_column_meta(merged_table, '../columns.yml')\n",
     "        merged_table[columns].write(\"data/tiles/xmm-lss_{}_cigale_{}.fits\".format(SUFFIX, file_num), overwrite=True)"
    ]
   },
@@ -1991,7 +1993,7 @@
    "outputs": [],
    "source": [
     "if not FIRST_RUN_FOR_CIGALE:\n",
-    "\n",
+    "    merged_table = add_column_meta(merged_table, '../columns.yml')\n",
     "    merged_table[columns].write(\"data/CDFS-SWIRE.fits\")"
    ]
   }
