fix aperture flags AKARI-NEP and SEP and rerun final merges

--- a/dmu6/dmu6_v_AKARI-NEP/4_flags_akari-nep.ipynb
+++ b/dmu6/dmu6_v_AKARI-NEP/4_flags_akari-nep.ipynb
@@ -183,7 +183,7 @@
     "    basecol = band.replace(\" \", \"_\").lower()\n",
     "    \n",
     "    ecol_ap = \"merr_ap_{}\".format(basecol)\n",
-    "    flagcol_ap = \"flag_{}_ap\".format(basecol)\n",
+    "    flagcol_ap = \"flag_ap_{}\".format(basecol)\n",
     "    \n",
     "    mask_ap  = np.where(master_catalogue[ecol_ap]  == irac_mag)[0]\n",
     "    \n",
@@ -232,7 +232,7 @@
     "        try:\n",
     "            col1, col2 = \"m_ap_{}\".format(basecol1), \"m_ap_{}\".format(basecol2)\n",
     "            ecol1, ecol2 = \"merr_ap_{}\".format(basecol1), \"merr_ap_{}\".format(basecol2)\n",
-    "            flagcol1, flagcol2 = \"flag_{}_ap\".format(basecol1), \"flag_{}_ap\".format(basecol2)\n",
+    "            flagcol1, flagcol2 = \"flag_ap_{}\".format(basecol1), \"flag_ap_{}\".format(basecol2)\n",
     "        \n",
     "            flag_outliers(master_catalogue[col1], master_catalogue[col2],\n",
     "                          master_catalogue[ecol1], master_catalogue[ecol2],\n",
