Move dmu16a to dum16

--- a/dmu32/dmu32_AKARI-NEP/AKARI-NEP_catalogue_merging.ipynb
+++ b/dmu32/dmu32_AKARI-NEP/AKARI-NEP_catalogue_merging.ipynb
@@ -23,9 +23,9 @@
      "output_type": "stream",
      "text": [
       "This notebook was run with herschelhelp_internal version: \n",
-      "708e28f (Tue May 8 18:05:21 2018 +0100) [with local modifications]\n",
+      "017bb1e (Mon Jun 18 14:58:59 2018 +0100)\n",
       "This notebook was executed on: \n",
-      "2018-06-18 14:49:56.090431\n"
+      "2018-06-18 17:39:14.091221\n"
      ]
     }
    ],
@@ -367,8 +367,8 @@
       "Column: flag_gpc1_i not in masterlist.\n",
       "Column: flag_gpc1_z not in masterlist.\n",
       "Column: flag_gpc1_y not in masterlist.\n",
-      "Column: flag_irac_i1_ap not in masterlist.\n",
-      "Column: flag_irac_i2_ap not in masterlist.\n"
+      "Column: flag_irac_i1 not in masterlist.\n",
+      "Column: flag_irac_i2 not in masterlist.\n"
      ]
     }
    ],
@@ -407,7 +407,7 @@
      "output_type": "stream",
      "text": [
       "set()\n",
-      "{'flag_irac_i2_ap', 'flag_irac_i1_ap'}\n"
+      "set()\n"
      ]
     }
    ],
