--- a/dmu32/dmu32_AKARI-SEP/AKARI-SEP_catalogue_merging.ipynb
+++ b/dmu32/dmu32_AKARI-SEP/AKARI-SEP_catalogue_merging.ipynb
@@ -338,16 +338,7 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Column: flag_irac_i1_ap not in masterlist.\n",
-      "Column: flag_irac_i2_ap not in masterlist.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for col in flags.colnames:\n",
     "    if 'flag' in col:\n",
@@ -383,7 +374,7 @@
      "output_type": "stream",
      "text": [
       "set()\n",
-      "{'flag_irac_i2_ap', 'flag_irac_i1_ap'}\n"
+      "set()\n"
      ]
     }
    ],
