--- a/dmu6/dmu6_v_AKARI-NEP/4_flags_akari-nep.ipynb
+++ b/dmu6/dmu6_v_AKARI-NEP/4_flags_akari-nep.ipynb
@@ -269,7 +269,16 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "flag_ap_irac_i1 only has aperture flags.\n",
+      "flag_ap_irac_i2 only has aperture flags.\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "#Merge any aperture flags#Merge  \n",
