--- a/dmu1/dmu1_ml_COSMOS/1.9_COSMOS2015.ipynb
+++ b/dmu1/dmu1_ml_COSMOS/1.9_COSMOS2015.ipynb
@@ -251,15 +251,15 @@
     "    if 'irac' in col:\n",
     "        if col.startswith('f_'):\n",
     "            catalogue.add_column(Column(np.zeros(len(catalogue), dtype=bool), name=\"flag{}\".format(col[1:])))\n",
-    "            mask = ( catalogue[col] < 90.\n",
-    "                   | catalogue[col.replace('f_', 'ferr_')] < 90.\n",
+    "            mask = ( (catalogue[col] < 90.)\n",
+    "                   | (catalogue[col.replace('f_', 'ferr_')] < 90.)\n",
     "                   )\n",
     "            catalogue[col][mask] = np.nan\n",
     "            catalogue[col.replace('f_', 'ferr_')][mask] = np.nan\n",
     "        if col.startswith('m_'):\n",
     "           \n",
-    "            mask = ( catalogue[col] < 90.\n",
-    "                   | catalogue[col.replace('m_', 'merr_')] < 90.\n",
+    "            mask = ( (catalogue[col] < 90.)\n",
+    "                   | (catalogue[col.replace('m_', 'merr_')] < 90.)\n",
     "                   )\n",
     "            catalogue[col][mask] = np.nan\n",
     "            catalogue[col.replace('m_', 'merr_')][mask] = np.nan\n",
