--- a/dmu26/dmu26_XID+PACS_ELAIS-S1/XID+PACS_prior.ipynb
+++ b/dmu26/dmu26_XID+PACS_ELAIS-S1/XID+PACS_prior.ipynb
@@ -132,7 +132,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "PACS_100='../../dmu18/dmu18_HELP-PACS-maps/data/ELAIS-S1_PACS100_v0.9.fits'\n",
     "PACS_160='../../dmu18/dmu18_HELP-PACS-maps/data/ELAIS-S1_PACS160_v0.9.fits'\n",
     "#output folder\n",
@@ -169,8 +168,7 @@
     "w_160 = wcs.WCS(hdulist[1].header)\n",
     "pixsize160=3600.0*np.abs(hdulist[1].header['CDELT1']) #pixel size (in arcseconds)\n",
     "nim160=hdulist[2].data\n",
-    "hdulist.close()\n",
-    "\n"
+    "hdulist.close()"
    ]
   },
   {
@@ -197,9 +195,7 @@
     "radius160=25\n",
     "\n",
     "pind100=np.arange(0,radius100+1+radius100,1)*3600*np.abs(pacs100_psf[1].header['CDELT1'])/pixsize100 #get 100 scale in terms of pixel scale of map\n",
-    "pind160=np.arange(0,radius160+1+radius160,1)*3600*np.abs(pacs160_psf[1].header['CDELT1'])/pixsize160 #get 160 scale in terms of pixel scale of map\n",
-    "\n",
-    "\n"
+    "pind160=np.arange(0,radius160+1+radius160,1)*3600*np.abs(pacs160_psf[1].header['CDELT1'])/pixsize160 #get 160 scale in terms of pixel scale of map"
    ]
   },
   {
@@ -258,7 +254,7 @@
     "plt.colorbar()\n",
     "plt.subplot(1,2,2)\n",
     "plt.imshow(pacs160_psf[1].data[centre160-radius160:centre160+radius160+1,centre160-radius160:centre160+radius160+1])\n",
-    "plt.colorbar()\n"
+    "plt.colorbar()"
    ]
   },
   {
@@ -286,7 +282,7 @@
     "#---prior160--------\n",
     "prior160=xidplus.prior(im160,nim160,im160phdu,im160hdu, moc=Sel_func)\n",
     "prior160.prior_cat(XID_MIPS['RA'][good],XID_MIPS['Dec'][good],'dmu26_XID+MIPS_ELAIS-S1_20180215.fits',ID=XID_MIPS['help_id'][good])\n",
-    "prior160.prior_bkg(0.0,5)\n"
+    "prior160.prior_bkg(0.0,5)"
    ]
   },
   {
@@ -321,11 +317,11 @@
     {
      "ename": "SystemExit",
      "evalue": "",
-     "output_type": "error",
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
       "\u001b[0;31mSystemExit\u001b[0m\n"
-     ]
+     ],
+     "output_type": "error"
     }
    ],
    "source": [
@@ -363,7 +359,7 @@
     }
    ],
    "source": [
-    "ls -ltrh\n"
+    "ls -ltrh"
    ]
   },
   {
@@ -373,7 +369,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "code",
@@ -382,7 +380,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "code",
@@ -391,7 +391,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -403,7 +405,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -414,5 +416,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
